Added migration and N+1 probelem solving

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,21 @@ spring.datasource.password=29075002@Pg
 
 spring.jpa.show-sql=true
 
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 
 server.port=7474
+
+#to enable lazy loading in spring data jpa
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+logging.level.org.springframework.data=DEBUG
+
+#for adding flyway to the existing database
+#spring.flyway.baseline-on-migrate=true
+
+spring.flyway.url=jdbc:mysql://localhost:3306/Uber_DB_local
+
+spring.flyway.user=root
+
+spring.flyway.password=29075002@Pg
