--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,10 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+//    implementation 'org.flywaydb:flyway-core:6.4.3'
+//    implementation group: 'org.flywaydb', name:'flyway-mysql', version:'8.3.0'
+//    implementation 'org.flywaydb:flyway-core:8.4.4'
+    implementation 'org.flywaydb:flyway-mysql:8.4.4'
 }
 
 tasks.named('test') {
